<resources>
    <string name="app_name">Text Scanner</string>
    <string name="file_provider">%s.my.package.name.provider</string>
    <string name="open_file_">Open File</string>
    <string name="todo">TODO</string>
    <string name="name_app">TEXT SCANNER</string>
    <string name="share_friends">Share to Friends</string>
    <string name="rate">Rate 5 Stars</string>
    <string name="more_app">More Apps</string>
    <string name="privacy">Privacy Policy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="wait_me_a_min">Please wait a moment ...</string>
    <string name="close">Close</string>
    <string name="select_image">Scan from photos</string>
    <string name="null_image">Current devices do not have images</string>
    <string name="warning">Warning</string>
    <string name="not_have_permission">You don\'t have permission, give the application permissions so you can experience the application</string>
    <string name="accept">Accept</string>
    <string name="format_timestamp">IMG_%s_</string>
    <string name="scan_text">Scanned Text</string>
    <string name="file_information">File Information</string>
    <string name="file_name">File name</string>
    <string name="enter_name_pdf">Enter name file</string>
    <string name="strCancel">CANCEL</string>
    <string name="save">Save</string>
    <string name="text">TEXT</string>
    <string name="pdf">PDF</string>
    <string name="convert_pdf_folder">%s/%s%s</string>
    <string name="format_path">Storage Path: %s/%s%s</string>
    <string name="count_selected">%d Selected</string>
    <string name="format_path_">Storage Path: %s</string>
    <string name="format_path__">Storage Path:</string>
    <string name="equal_name">This name already exists. Please enter another name</string>
    <string name="file_format">$s.$s</string>
    <string name="my_doc">My Library</string>
    <string name="null_file">Current devices do not have files</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="detail">Detail</string>
    <string name="information">File Information</string>
    <string name="name_file">Name</string>
    <string name="null_name_file">File name cannot be empty</string>
    <string name="number_characters">The number of characters entering a filename must not exceed 20 characters</string>
    <string name="size">Size</string>
    <string name="create_at">Create At</string>
    <string name="path">Path</string>
    <string name="data">data</string>
    <string name="pdf_rename">Rename File</string>
    <string name="pdf_file_name">File name</string>
    <string name="new_name_input">Enter new name</string>
    <string name="space_error">Only space is not allowed</string>
    <string name="rename_fail">Can\'t rename file. Please try again.</string>
    <string name="rename_success">Rename file to %s successfully.</string>
    <string name="end_point_">%s%s</string>
    <string name="exist_name">Choice another name. File is existed.</string>
    <string name="remove_file">Remove File</string>
    <string name="wait_delete_file">Are you sure you want to delete this file?</string>
    <string name="double_tab">Please click Back again to exit</string>
    <string name="not_internet">There is currently no network to perform this operation</string>
    <string name="save_success">Save  file successfully</string>
    <string name="enter_content_file">Enter content file</string>
    <string name="null_content">The content file is empty, please enter the file content</string>
    <string name="text_scan_error">Text recognizer could not be set up on your device</string>
    <string name="want_delete_selected_file">Are you sure you want to delete the selected files</string>
    <string name="crop_image">Crop Image</string>
    <string name="app_Id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="copy_success">Copy content successfully</string>
    <string name="format_page_">%d/%d</string>
    <string name="input_password_">Please enter the pdf file password </string>
    <string name="wrong_pass">Incorrect password. Please try again</string>
    <string name="password">Password</string>
    <string name="enter_password_pdf">Enter password for the PDF</string>
    <string name="strOk">Ok</string>
    <string name="delete_success">Delete the file successfully</string>
    <string name="to">t</string>
    <string name="null_content_scan">The scanned content is empty, Please try again</string>
    <string name="error">Error !</string>
    <string name="error_scan_text">Can\'t read any text</string>
</resources>
