<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_30dp"
        android:layout_marginRight="@dimen/dimen_30dp"
        android:background="@drawable/footer_transperent_error"
        android:orientation="vertical">

        <TextView
            style="@style/textNormalBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/header_orange_error"
            android:gravity="center"
            android:paddingTop="@dimen/margin_5dp"
            android:paddingBottom="@dimen/margin_5dp"
            android:text="@string/error"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_25sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10dp">

            <ImageView
                android:id="@+id/imgError"
                android:layout_width="@dimen/dimen_55dp"
                android:layout_height="@dimen/dimen_55dp"
                android:layout_margin="@dimen/dimen_20dp"
                android:src="@drawable/ic_error_icon" />

            <TextView
                style="@style/textNormalBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/dimen_30dp"
                android:layout_toEndOf="@+id/imgError"
                android:text="@string/error_scan_text"
                android:textColor="@color/bg_gray" />
        </RelativeLayout>


        <ImageView
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_40dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/margin_5dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ok_button" />
    </LinearLayout>
</layout>