<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        android:background="@drawable/bg_base_light_dialog"
        android:orientation="vertical">

        <TextView
            style="@style/textNormalBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/header_blue"
            android:gravity="center"
            android:paddingTop="@dimen/dimen_17dp"
            android:paddingBottom="@dimen/dimen_17dp"
            android:text="@string/password"
            android:textAllCaps="true"
            android:textSize="@dimen/text_size_27sp" />

        <TextView
            style="@style/textNormalBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_30dp"
            android:text="@string/password"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/edNameFile"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_45dp"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:layout_marginEnd="@dimen/dimen_20dp"
            android:background="@drawable/border_gray"
            android:fontFamily="@font/f_sans_regular"
            android:hint="@string/enter_password_pdf"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="@dimen/margin_15dp"
            tools:ignore="RtlSymmetry" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_15dp"
            android:layout_marginTop="@dimen/dimen_40dp"
            android:layout_marginEnd="@dimen/dimen_15dp"
            android:layout_marginBottom="@dimen/dimen_30dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCancel"
                style="@style/textNormalBold"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_5dp"
                android:layout_marginEnd="@dimen/dimen_20dp"
                android:layout_weight="1"
                android:background="@drawable/btn_gray"
                android:text="@string/strCancel"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btnRename"
                style="@style/textNormalBold"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_blue"
                android:gravity="center"
                android:text="@string/strOk"
                android:textAllCaps="false" />
        </LinearLayout>
    </LinearLayout>
</layout>