<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog_border"
        android:padding="@dimen/margin_2dp">

        <LinearLayout
            android:id="@+id/root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_dialog_border"
            android:orientation="vertical">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animationView"
                android:layout_width="@dimen/dimen_150dp"
                android:layout_height="@dimen/dimen_150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_10dp"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/permissions" />

            <TextView
                android:id="@+id/title"
                style="@style/textNormalBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_15dp"
                android:layout_marginEnd="@dimen/margin_15dp"
                android:ellipsize="end"
                android:gravity="center"
                android:text="@string/warning"
                android:textColor="@color/primary_1"
                android:textSize="@dimen/text_size_18sp" />

            <TextView
                android:id="@+id/message"
                style="@style/txt_cc_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/margin_15dp"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:layout_marginRight="@dimen/margin_15dp"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="3"
                android:text="@string/not_have_permission"
                android:textColor="@color/primary_2"
                android:textSize="@dimen/text_size_15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/margin_15dp"
                android:layout_marginTop="@dimen/dimen_30dp"
                android:layout_marginRight="@dimen/margin_15dp"
                android:layout_marginBottom="@dimen/dimen_30dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnClose"
                    style="@style/btn_primary_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dimen_20dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/close"
                    android:textAllCaps="false"
                    android:textColor="@color/btn_text_grey" />

                <Button
                    android:id="@+id/btnAccept"
                    style="@style/btn_primary_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/accept"
                    android:textAllCaps="false"
                    android:textColor="@color/btn_white" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</layout>