<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        android:background="@drawable/bg_base_light_dialog"
        android:orientation="vertical">

        <TextView
            style="@style/textNormalBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/header_orange"
            android:gravity="center"
            android:paddingTop="@dimen/dimen_17dp"
            android:paddingBottom="@dimen/dimen_17dp"
            android:text="@string/file_information"
            android:textAllCaps="true"
            android:textSize="@dimen/text_size_22sp" />

        <RadioGroup
            android:id="@+id/rdGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_25dp"
            android:layout_marginEnd="@dimen/dimen_20dp"
            android:layout_marginBottom="@dimen/margin_10dp">

            <RadioButton
                android:id="@+id/rdText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text"
                android:textSize="@dimen/text_size_18sp" />

            <RadioButton
                android:id="@+id/rdPDF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5dp"
                android:checked="true"
                android:text="@string/pdf"
                android:textSize="@dimen/text_size_18sp" />
        </RadioGroup>

        <TextView
            style="@style/textNormalBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:text="@string/file_name"
            android:textColor="@color/colorPrimary" />

        <LinearLayout
            android:id="@+id/llName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:layout_marginEnd="@dimen/dimen_20dp"
            android:background="@drawable/border_yellow"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edNameFile"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_45dp"
                android:background="@color/transparent"
                android:drawableStart="@drawable/ic_file_icon"
                android:drawablePadding="@dimen/margin_10dp"
                android:fontFamily="@font/f_sans_regular"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="text"
                android:lines="1"
                android:maxLength="20"
                android:paddingStart="@dimen/margin_15dp"
                android:textColorHint="@android:color/transparent"
                android:textSize="@dimen/text_size_16sp"
                tools:ignore="LabelFor,RtlSymmetry" />

            <TextView
                android:id="@+id/txtEndPoint"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_45dp"
                android:layout_gravity="center"
                android:fontFamily="@font/f_sans_regular"
                android:gravity="center"
                android:lines="1"
                android:textSize="@dimen/text_size_18sp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <EditText
            android:id="@+id/edPath"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_25dp"
            android:layout_marginEnd="@dimen/dimen_20dp"
            android:background="@drawable/border_yellow"
            android:drawableStart="@drawable/ic_folder"
            android:drawablePadding="@dimen/margin_10dp"
            android:focusable="false"
            android:fontFamily="@font/f_sans_regular"
            android:paddingStart="@dimen/margin_15dp"
            android:paddingTop="@dimen/dimen_8dp"
            android:paddingRight="@dimen/margin_10dp"
            android:paddingBottom="@dimen/dimen_8dp"
            android:textSize="@dimen/text_size_16sp"
            tools:ignore="Autofill,LabelFor,RtlHardcoded,RtlSymmetry,TextFields" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_15dp"
            android:layout_marginTop="@dimen/dimen_40dp"
            android:layout_marginEnd="@dimen/dimen_15dp"
            android:layout_marginBottom="@dimen/dimen_30dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCancel"
                style="@style/textNormalBold"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_5dp"
                android:layout_marginEnd="@dimen/dimen_20dp"
                android:layout_weight="1"
                android:background="@drawable/btn_gray"
                android:text="@string/strCancel"
                android:textAllCaps="true" />

            <Button
                android:id="@+id/btnConvert"
                style="@style/textNormalBold"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_orange"
                android:gravity="center"
                android:text="@string/save"
                android:textAllCaps="true" />
        </LinearLayout>
    </LinearLayout>
</layout>