<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog_border"
        android:padding="@dimen/margin_2dp">

        <LinearLayout
            android:id="@+id/root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_dialog_border"
            android:orientation="vertical">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animationView"
                android:layout_width="@dimen/dimen_150dp"
                android:layout_height="@dimen/dimen_150dp"
                android:layout_gravity="center_horizontal"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/docs" />

            <TextView
                android:id="@+id/title"
                style="@style/textNormalBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_15dp"
                android:layout_marginEnd="@dimen/margin_15dp"
                android:ellipsize="end"
                android:gravity="center"
                android:text="@string/information"
                android:textColor="@color/primary_1"
                android:textSize="@dimen/text_size_18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_15dp"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:layout_marginEnd="@dimen/margin_15dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/textNormalBold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dimen_8dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/name_file"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="@dimen/text_size_15sp" />

                    <TextView
                        style="@style/textNormalBold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dimen_8dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/size"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="@dimen/text_size_15sp" />

                    <TextView
                        style="@style/textNormalBold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="@dimen/dimen_8dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/create_at"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="@dimen/text_size_15sp" />

                    <TextView
                        style="@style/textNormalBold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:lines="2"
                        android:text="@string/path"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="@dimen/text_size_15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtNameFile"
                        style="@style/textNormalBold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dimen_8dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/name_file"
                        android:textColor="@color/gnt_black"
                        android:textSize="@dimen/text_size_15sp" />

                    <TextView
                        android:id="@+id/txtData"
                        style="@style/textNormalBold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dimen_8dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/data"
                        android:textColor="@color/gnt_black"
                        android:textSize="@dimen/text_size_15sp" />

                    <TextView
                        android:id="@+id/txtCreateAt"
                        style="@style/textNormalBold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dimen_8dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/create_at"
                        android:textColor="@color/gnt_black"
                        android:textSize="@dimen/text_size_15sp" />

                    <TextView
                        android:id="@+id/txtPath"
                        style="@style/textNormalBold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:lines="2"
                        android:text="@string/path"
                        android:textColor="@color/gnt_black"
                        android:textSize="@dimen/text_size_15sp" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/btnClose"
                style="@style/btn_primary_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/margin_15dp"
                android:layout_marginTop="@dimen/dimen_30dp"
                android:layout_marginRight="@dimen/margin_15dp"
                android:layout_marginBottom="@dimen/dimen_30dp"
                android:gravity="center"
                android:text="@string/close"
                android:textAllCaps="false"
                android:textColor="@color/btn_text_grey" />
        </LinearLayout>
    </RelativeLayout>
</layout>